<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginConstraintLayout"
    style="@style/paddedConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".fragment.LoginFragment">

    <TextView
        android:id="@+id/loginTextBanner"
        style="@style/textBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logging_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailTextInputLayout"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/loginPasswordTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextBanner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordTextInputLayout"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/primaryButton"
        android:layout_width="0dp"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordTextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordTextButton"
        style="@style/textButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_forgotten"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>